fix nav bar and align header img

--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -15,7 +15,7 @@ body {
 
 .wrapper {
   max-width: 1400px;
-  width: 80vw;
+  width: 80%;
   margin: 0 auto;
 }
 
