--- a/styles/style.css
+++ b/styles/style.css
@@ -252,7 +252,7 @@ body {
 
 .wrapper {
   max-width: 1400px;
-  width: 80vw;
+  width: 80%;
   margin: 0 auto;
 }
 
@@ -431,6 +431,7 @@ time {
   background-size: cover;
   background-repeat: no-repeat;
   background-color: #0F0F0F;
+  position: relative;
   height: 75vh;
   padding-top: 50px;
 }
@@ -483,7 +484,7 @@ time {
 
 .pop-out img {
   position: absolute;
-  bottom: 50px;
+  bottom: -150px;
   right: 0;
   width: 50%;
   z-index: 10;
